# ucx-windows-app

./: .gitignore  .gitmodules  ARCHITECTURE.md  AVALONIA_PROJECT_REVIEW.md  README.md  build_log.txt  direct_link.bat  launch-avalonia-app.cmd  launch-ucx-avalonia-app.cmd  launch-ucx-web-app.cmd  launch-ucx-windows-app.cmd  ucx-web-app.code-workspace  ucx-web-app.ini  ucx-windows-app.code-workspace  ucxclient.code-workspace
.github/: copilot-instructions.md
ucx-avalonia-app/: App.axaml  App.axaml.cs  BUILD.md  Program.cs  README.md  UcxAvaloniaApp.csproj  ViewLocator.cs  app.manifest  launch.cmd  launch.sh
ucx-avalonia-app/Models/: WifiNetwork.cs  WifiScanResult.cs
ucx-avalonia-app/Services/: SerialPortService.cs  UcxClient.cs  UcxNative.cs  UcxNativeGenerated.cs
ucx-avalonia-app/ViewModels/: BoolToColorConverter.cs  MainWindowViewModel.cs  ViewModelBase.cs
ucx-avalonia-app/Views/: MainWindow.axaml  MainWindow.axaml.cs
ucx-web-app/: CMakeLists.txt  README.md  app.js  build_env.txt  index.html  library.js  serial.js  u_port_clib.h  u_port_web.c  ucx_wasm_wrapper.c  ucxclient.js  ucxclient.wasm  wasm-bridge.js
ucx-web-terminal/: CMakeLists.txt  README.md  index.html  u_port_web.c  ucx_wasm_wrapper.c
ucx-windows-app/: CMakeLists.txt  UCX_WIN_APP_RELEASE.md  ucx-windows-app.c  ucx-windows-app.rc  version.h.in
ucx-windows-app_do_not_use/: UCX_XMODEM.md  tasks.py  ucx-windows-app.c  ucx-windows-app.rc
ucxclient-wrapper/: CMakeLists.txt  CODEGEN_README.md  generate_wrapper.py  u_port_windows.c  u_port_windows.h  ucx_wrapper_config.h  ucxclient_wrapper.c  ucxclient_wrapper.h  ucxclient_wrapper_core.c  ucxclient_wrapper_generated.c  ucxclient_wrapper_generated.h  ucxclient_wrapper_internal.h
